test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-trigger-not-present/generated.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  annotations:
    kyverno.io/user: nancy
  name: ns-admin-cpol-data-trigger-not-present-ns-nancy-binding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ns-admin-cpol-data-trigger-not-present-ns-nancy
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: nancy
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  annotations:
    kyverno.io/user: nancy
  name: ns-admin-cpol-data-trigger-not-present-ns-nancy
rules:
- apiGroups:
  - ""
  resourceNames:
  - cpol-data-trigger-not-present-ns
  resources:
  - namespaces
  verbs:
  - get
  - delete
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  annotations:
    kyverno.io/user: nancy
  name: nancy-admin-binding
  namespace: cpol-data-trigger-not-present-ns
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: admin
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: nancy
