test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-trigger-not-present/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-trigger-not-present
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
