test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-trigger-not-present/roles.yaml
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: "ns-admin"
rules:
  - apiGroups: [""]
    resources: ["namespaces"]
    verbs: ["create", "list"]
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: nancy
subjects:
  - kind: User
    name: nancy
roleRef:
  kind: ClusterRole
  name: ns-admin
  apiGroup: rbac.authorization.k8s.io
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: ned
subjects:
  - kind: User
    name: ned
roleRef:
  kind: ClusterRole
  name: ns-admin
  apiGroup: rbac.authorization.k8s.io
