test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-trigger-not-present/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-trigger-not-present
spec:
  timeouts:
    delete: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: roles.yaml
  - name: step-02
    try:
    - apply:
        file: rbac.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-data-trigger-not-present
  - name: step-04
    try:
    - script:
        content: "kubectl create ns cpol-data-trigger-not-present-ns --as nancy"
  - name: step-05 # background controller permission
    try:
    - assert:
        file: generated.yaml
  - name: step-06
    try:
    - script:
        content: "kubectl delete ns cpol-data-trigger-not-present-ns"
        timeout: 2m
  - name: step-07
    try:
    - script:
        content: "kubectl delete clusterrole ns-admin-cpol-data-trigger-not-present-ns-nancy"
  - name: step-08
    try:
    - sleep:
        duration: 10s
  - name: step-07
    try:
    - script:
        content: kubectl get updaterequests -n kyverno
        check:
          # This check ensures the contents of stderr are exactly as shown.
          (trim_space($stderr)): |-
            No resources found in kyverno namespace.
